--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@better-auth/expo",
-  "version": "1.0.25",
+  "name": "@bachha2906/better-auth-expo",
+  "version": "1.0.26",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
